--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2022</title>
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://dpalmer.in/best-of-2022" />
+    <meta
+      name="twitter:title"
+      content="Listas de fin de año"
+    />
+    <meta
+      name="twitter:description"
+      content="Ya ven que casi no me gusta hacer paginitas"
+    />
+    <meta
+      name="twitter:image"
+      content="https://dpalmer.in/best-of-2022/albums-cover.jpg"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" /><link
       rel="preconnect"
       href="https://fonts.gstatic.com"
