--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.gstatic.com"
       crossorigin
     /><link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;800&display=swap"
       rel="stylesheet"
     />
   </head>
