--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       href="https://fonts.gstatic.com"
       crossorigin
     /><link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;800&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/best-of-2022/assets/main-363987f3.js"></script>
-    <link rel="stylesheet" href="/best-of-2022/assets/main-e7d194d7.css">
+    <script type="module" crossorigin src="/best-of-2022/assets/main-1fb64fe5.js"></script>
+    <link rel="stylesheet" href="/best-of-2022/assets/main-edeb0e76.css">
   </head>
   <body>
     <div id="root"></div>
